--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,10 +9,11 @@ description = "Simple voice AI assistant built with LiveKit Agents for Python"
 requires-python = ">=3.9"
 
 dependencies = [
-    "livekit-agents[openai,turn-detector,silero,cartesia,deepgram]~=1.2",
+    "livekit-agents[cartesia,deepgram,mcp,openai,silero,turn-detector]~=1.2",
     "livekit-plugins-cartesia>=1.2.9",
     "livekit-plugins-noise-cancellation~=0.2",
     "python-dotenv",
+    "langsmith>=0.1.0",
 ]
 
 [dependency-groups]
