--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,8 +9,7 @@ description = "Simple voice AI assistant built with LiveKit Agents for Python"
 requires-python = ">=3.9"
 
 dependencies = [
-    "livekit-agents[cartesia,deepgram,mcp,openai,silero,turn-detector]~=1.2",
-    "livekit-plugins-cartesia>=1.2.9",
+    "livekit-agents[elevenlabs,deepgram,mcp,openai,silero,turn-detector]~=1.2",
     "livekit-plugins-noise-cancellation~=0.2",
     "python-dotenv",
     "langsmith>=0.1.0",
