Making progress on the MVP.

--- a/.env.example
+++ b/.env.example
@@ -6,9 +6,26 @@ LIVEKIT_API_SECRET=
 # OpenAI configuration (for original agent.py)
 OPENAI_API_KEY=
 
-# n8n webhook configuration (for n8n_agent.py)
+# n8n webhook configuration (for n8n_agent.py and medical_agent.py)
 N8N_WEBHOOK_URL=https://your-n8n-instance.com/webhook/your-webhook-id
 N8N_WEBHOOK_TOKEN=your-webhook-bearer-token
+
+# Conversation persistence configuration
+# Set to "true" to enable test mode (saves to local JSON files instead of N8N)
+TEST_MODE=false
+
+# Logging configuration
+# Set to DEBUG to see detailed event logging (default: INFO)
+LOG_LEVEL=INFO
+
+# LiveKit Egress Recording (for room audio recording)
+# Use Cloudflare R2 (recommended, S3-compatible, no egress fees)
+# Or use AWS S3, Backblaze B2, or any S3-compatible storage
+S3_ACCESS_KEY=your_r2_access_key
+S3_SECRET_KEY=your_r2_secret_key
+S3_ENDPOINT=https://<account-id>.r2.cloudflarestorage.com
+S3_BUCKET=voice-agent-recordings
+S3_REGION=auto
 
 # Deepgram configuration (for STT)
 DEEPGRAM_API_KEY=
