--- a/.env.example
+++ b/.env.example
@@ -19,13 +19,10 @@ TEST_MODE=false
 LOG_LEVEL=INFO
 
 # LiveKit Egress Recording (for room audio recording)
-# Use Cloudflare R2 (recommended, S3-compatible, no egress fees)
-# Or use AWS S3, Backblaze B2, or any S3-compatible storage
-S3_ACCESS_KEY=your_r2_access_key
-S3_SECRET_KEY=your_r2_secret_key
-S3_ENDPOINT=https://<account-id>.r2.cloudflarestorage.com
-S3_BUCKET=voice-agent-recordings
-S3_REGION=auto
+# Azure Blob Storage configuration
+AZURE_STORAGE_ACCOUNT_NAME=your_storage_account_name
+AZURE_STORAGE_ACCOUNT_KEY=your_storage_account_key
+AZURE_STORAGE_CONTAINER_NAME=voice-agent-recordings
 
 # Deepgram configuration (for STT)
 DEEPGRAM_API_KEY=
